--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section>
             <h2>About Us</h2>
             <p>At the core of our undergraduate non-profit organization lies a powerful commitment to advancing health literacy and enhancing the well-being of the diverse USC community and broader South Los Angeles area. Our mission is centered around the curation of a bilingual medical literacy magazine, named CURAM, with the overarching goal of providing accessible and comprehensible information about crucial medical subjects and social issues. We recognize the significance of informed decision-making in healthcare and aspire to equip individuals with the knowledge and resources they need to make informed health decisions without financial burden.</p>
-            <p>For our upcoming issue, we will combine our goal of advancing health literacy with USC’s commitment to sustainability and create an “Environmental Health and Sustainability” issue. This magazine fulfills Arts in Action’s mission of inspiring social change through health and wellness, bridging education inequities, and, most importantly, the goal of sustainability.</p>
+            <p>For our upcoming issue, we will combine our goal of advancing health literacy with USC’s commitment to sustainability and create an “Environmental Health and Sustainability” issue. </p>
         </section>
 
         <section class="pdf-list">
