--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         .pdf-list a:hover {
             text-decoration: underline;
         }
+        .cover-image {
+            margin-top: 2rem;
+            text-align: center;
+        }
+        .cover-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -54,6 +64,11 @@
             <h2>About Us</h2>
             <p>At the core of our undergraduate non-profit organization lies a powerful commitment to advancing health literacy and enhancing the well-being of the diverse USC community and broader South Los Angeles area. Our mission is centered around the curation of a bilingual medical literacy magazine, named CURAM, with the overarching goal of providing accessible and comprehensible information about crucial medical subjects and social issues. We recognize the significance of informed decision-making in healthcare and aspire to equip individuals with the knowledge and resources they need to make informed health decisions without financial burden.</p>
             <p>For our upcoming issue, we will combine our goal of advancing health literacy with USC’s commitment to sustainability and create an “Environmental Health and Sustainability” issue. </p>
+        </section>
+
+        <section class="cover-image">
+            <h2>Current Issue Cover</h2>
+            <img src="pdfs/environmental_health_cover.jpg" alt="Environmental Health and Sustainability Cover">
         </section>
 
         <section class="pdf-list">
