--- a/index.html
+++ b/index.html
@@ -4,79 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURAM Magazine</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background: #0073e6;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        .container {
-            width: 80%;
-            margin: 2rem auto;
-            background: #fff;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .pdf-list {
-            margin-top: 2rem;
-        }
-        .pdf-list a {
-            display: block;
-            text-decoration: none;
-            color: #0073e6;
-            margin: 0.5rem 0;
-        }
-        .pdf-list a:hover {
-            text-decoration: underline;
-        }
-        .cover-image {
-            margin-top: 2rem;
-            text-align: center;
-        }
-        .cover-image img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>CURAM Magazine</h1>
-        <p>Advancing Health Literacy for the USC and South Los Angeles Communities</p>
+        <p>Advancing Health Literacy for USC and South Los Angeles Communities</p>
     </header>
-    <div class="container">
-        <section>
+
+    <main>
+        <section class="featured">
+            <h2>Featured Magazine Edition</h2>
+            <div id="featured-edition">
+                <!-- Dynamic magazine content will load here -->
+            </div>
+        </section>
+
+        <section class="about">
             <h2>About Us</h2>
-            <p>At the core of our undergraduate non-profit organization lies a powerful commitment to advancing health literacy and enhancing the well-being of the diverse USC community and broader South Los Angeles area. Our mission is centered around the curation of a bilingual medical literacy magazine, named CURAM, with the overarching goal of providing accessible and comprehensible information about crucial medical subjects and social issues. We recognize the significance of informed decision-making in healthcare and aspire to equip individuals with the knowledge and resources they need to make informed health decisions without financial burden.</p>
-            <p>For our upcoming issue, we will combine our goal of advancing health literacy with USC’s commitment to sustainability and create an “Environmental Health and Sustainability” issue. </p>
+            <p>We are a non-profit organization dedicated to advancing health literacy and sustainability through our bilingual magazine.</p>
         </section>
 
-        <section class="cover-image">
-            <h2>Current Issue Cover</h2>
-            <img src="pdfs/environmental_health_cover.jpg" alt="Environmental Health and Sustainability Cover">
-        </section>
+        <footer>
+            <p>&copy; 2025 CURAM Magazine | All Rights Reserved</p>
+        </footer>
+    </main>
 
-        <section class="pdf-list">
-            <h2>Download Our Issues</h2>
-            <p>Explore our past issues below:</p>
-            <a href="pdfs/reproductive_health.pdf" download>Download Issue #1 - Reproductive Health</a>
-            <a href="pdfs/environmental_health.pdf" download>Download Issue #2 - Environmental Health and Sustainability</a>
-        </section>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
