--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header>
         <h1>CURAM Magazine</h1>
         <p>Advancing Health Literacy for USC and South Los Angeles Communities</p>
+        
+        <!-- Navigation Bar (Tabs) -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="magazine.html">Magazine</a></li>
+                <li><a href="members.html">Members</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
