--- a/members.html
+++ b/members.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navbar will be loaded dynamically here -->
+    <div id="navbar-container"></div>
+
     <header>
         <h1>CURAM Magazine Members</h1>
     </header>
@@ -27,5 +30,8 @@
     <footer>
         <p>&copy; 2025 CURAM Magazine | All Rights Reserved</p>
     </footer>
+
+    <!-- Ensure script.js is loaded -->
+    <script src="script.js"></script>
 </body>
 </html>
