--- a/magazine.html
+++ b/magazine.html
@@ -8,6 +8,9 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+     <!-- Nav Bar here -->
+    <div id="navbar-container"></div>
+    
     <header>
         <h1>CURAM Magazine</h1>
         <p>Advancing Health Literacy for the USC and South Los Angeles Communities</p>
@@ -27,7 +30,7 @@
         <section class="pdf-list">
             <h2>Download Our Issues</h2>
             <p>Explore our past issues below:</p>
-            <a href="pdfs/reproductive_health.pdf" download>📖 Reproductive Health Issue</a>
+            <a href="pdfs/reproductive_health.pdf" download>📖 Reproductive Health Issue</a><br>
             <a href="pdfs/environmental_health.pdf" download>🌱 Environmental Health Issue</a>
         </section>
     </div>
