--- a/magazine.html
+++ b/magazine.html
@@ -30,9 +30,24 @@
         <section class="pdf-list">
             <h2>Download Our Issues</h2>
             <p>Explore our past issues below:</p>
-            <a href="pdfs/reproductive_health.pdf" download>📖 Reproductive Health Issue</a><br>
-            <a href="pdfs/environmental_health.pdf" download>🌱 Environmental Health Issue</a>
+
+            <!-- Embedding Reproductive Health Magazine Edition -->
+            <h3>Reproductive Health Issue</h3>
+            <iframe src="pdfs/reproductive_health.pdf" width="600" height="400" frameborder="0">
+                This browser does not support PDF viewing.
+            </iframe>
+            <br>
+            <a href="pdfs/reproductive_health.pdf" download>📖 Download Reproductive Health Issue</a>
+
+            <!-- Embedding Environmental Health Magazine Edition -->
+            <h3>Environmental Health Issue</h3>
+            <iframe src="pdfs/environmental_health.pdf" width="600" height="400" frameborder="0">
+                This browser does not support PDF viewing.
+            </iframe>
+            <br>
+            <a href="pdfs/environmental_health.pdf" download>🌱 Download Environmental Health Issue</a>
         </section>
     </div>
+
 </body>
 </html>
