--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
+    <!-- Nav Bar here -->
+    <div id="navbar-container"></div>
+    
     <header>
         <h1>Contact CURAM Magazine</h1>
     </header>
@@ -26,6 +30,13 @@
 
                 <button type="submit">Send Message</button>
             </form>
+        </section>
+
+        <!-- Social Media and Contact Information -->
+        <section class="contact-info">
+            <h2>Get in Touch</h2>
+            <p>Email us at: <a href="mailto:curam@usc.edu">curam@usc.edu</a></p>
+            <p>Follow us on Instagram: <a href="https://www.instagram.com/curamusc/" target="_blank">@curamusc</a></p>
         </section>
     </main>
 
