--- a/index.html
+++ b/index.html
@@ -5,26 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
+    <!-- Navigation Bar is dynamically loaded from navbar.html -->
+    <div id="navbar-container"></div>
+
     <header>
         <h1>CURAM Magazine</h1>
         <p>Advancing Health Literacy for USC and South Los Angeles Communities</p>
-        
-        <!-- Navigation Bar (Tabs) -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="magazine.html">Magazine</a></li>
-                <li><a href="members.html">Members</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
+        <!-- Featured Section -->
         <section class="featured">
             <h2>Featured Magazine Edition</h2>
             <div id="featured-edition">
@@ -32,16 +25,26 @@
             </div>
         </section>
 
+        <!-- About Us Section -->
         <section class="about">
             <h2>About Us</h2>
             <p>We are a non-profit organization dedicated to advancing health literacy and sustainability through our bilingual magazine.</p>
         </section>
 
-        <footer>
-            <p>&copy; 2025 CURAM Magazine | All Rights Reserved</p>
-        </footer>
+        <!-- Spotify Playlist Section (with spinning effect) -->
+        <section class="spotify-section">
+            <h2>Curated Playlist</h2>
+            <p>Enjoy our featured playlist while browsing!</p>
+            <div id="turntable-container">
+                <iframe src="https://open.spotify.com/embed/playlist/5sBFFQsnPRolDYkrtjdyGx?si=1nwh3cPnQMi0To2WN3FUcA&pi=oqvpL07sSdSqR"
+                        width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+        </section>
     </main>
 
-    <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2025 CURAM Magazine | All Rights Reserved</p>
+    </footer>
+
 </body>
 </html>
