--- a/index.html
+++ b/index.html
@@ -35,16 +35,10 @@
         <section class="spotify-section">
             <h2>Curated Playlist</h2>
             <p>Enjoy our featured playlist while browsing!</p>
-            <!-- The turntable container where the spinning effect is applied -->
             <div id="turntable-container">
-                <!-- Add the Spotify iframe here but make it minimalistic with hidden controls -->
-                <iframe src="https://open.spotify.com/embed/playlist/5sBFFQsnPRolDYkrtjdyGx?si=1nwh3cPnQMi0To2WN3FUcA&pi=oqvpL07sSdSqR"
+                <img src="turntable-image.png" alt="Turntable" class="turntable-image">
+                <iframe src="https://open.spotify.com/embed/playlist/5sBFFQsnPRolDYkrtjdyGx?utm_source=generator"
                         width="0" height="0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                
-                <!-- The actual turntable graphic (this is just an example for now) -->
-                <div class="turntable">
-                    <img src="turntable-image.png" alt="Turntable" class="turntable-image">
-                </div>
             </div>
         </section>
     </main>
@@ -52,6 +46,5 @@
     <footer>
         <p>&copy; 2025 CURAM Magazine | All Rights Reserved</p>
     </footer>
-
 </body>
 </html>
