--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
+
+        <!-- Firebase SDK (must be before script.js) -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
     <script defer src="script.js"></script>
 </head>
 <body>
