--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
 
-        <!-- Firebase SDK (must be before script.js) -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <!-- Firebase SDK (must be before script.js) -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 
+    <!-- Main JavaScript file -->
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -44,7 +45,7 @@
             <div id="turntable-container">
                 <img src="turntable-image.png" alt="Turntable" class="turntable-image">
                 <iframe src="https://open.spotify.com/embed/playlist/5sBFFQsnPRolDYkrtjdyGx?utm_source=generator"
-                        width="0" height="0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </section>
         -->
