--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Firebase SDK (must be before script.js) -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+    <!-- Firebase SDK (direct CDN links) -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    <!-- Main JavaScript file -->
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -36,19 +35,6 @@
             <h2>About Us</h2>
             <p>We are a non-profit organization dedicated to advancing health literacy and sustainability through our bilingual magazine.</p>
         </section>
-
-        <!-- Spotify Playlist Section (with spinning effect) -->
-        <!--
-        <section class="spotify-section">
-            <h2>Curated Playlist</h2>
-            <p>Enjoy our featured playlist while browsing!</p>
-            <div id="turntable-container">
-                <img src="turntable-image.png" alt="Turntable" class="turntable-image">
-                <iframe src="https://open.spotify.com/embed/playlist/5sBFFQsnPRolDYkrtjdyGx?utm_source=generator"
-                        width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-        </section>
-        -->
     </main>
 
     <footer>
