--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Firebase SDK (direct CDN links) -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <!-- Firebase SDK (commented out for now) -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script> -->
 
     <script defer src="script.js"></script>
 </head>
