--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
 
 </head>
 <body>
-    <!-- Navigation Bar is dynamically loaded from navbar.html -->
+    <!-- Navigation Bar is dynamically loaded from navbar.html 
     <div id="navbar-container"></div>
+    -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="magazine.html">Magazine</a></li>
+            <li><a href="members.html">Members</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
 
+    
     <header>
         <h1>CURAM Magazine</h1>
         <p>Advancing Health Literacy for USC and South Los Angeles Communities</p>
