--- a/magazine.html
+++ b/magazine.html
@@ -8,8 +8,20 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-     <!-- Nav Bar here -->
+     <!-- Nav Bar here 
     <div id="navbar-container"></div>
+    -->
+    
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="magazine.html">Magazine</a></li>
+            <li><a href="members.html">Members</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
     
     <header>
         <h1>CURAM Magazine</h1>
