--- a/resources.html
+++ b/resources.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Resources | CURAM Magazine</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script> <!-- Ensure the script is loaded -->
 </head>
 <body>
-    <!-- Nav Bar here -->
+    <!-- Nav Bar here 
     <div id="navbar-container"></div>
+    -->
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="magazine.html">Magazine</a></li>
+            <li><a href="members.html">Members</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
+    
+    
     <header>
         <h1>CURAM Magazine - Health Resources</h1>
         <p>Providing valuable resources on reproductive and environmental health.</p>
